turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:8: error: expected class or object definition
def step() {
^LangtonsAnt:41: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:48: error: Unmatched closing brace '}' ignored here
}
^