turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c: Color) {
   	setCouleurBrosse(c)
   	baisseBrosse()
   	leveBrosse()
}
	
}
def step() {
	var x=getCouleurSol()
	if (x==Color.white){
		setCouleurSol(Color.black)
		droite()
		avance()
	}else{
		serCouleurSol(Color.white)
		gauche()
		avance()
	}
}


















